Added a new configuration option to hide the header (containing the table name and options menu) in all visualizations.

--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -1,4 +1,4 @@
-<div class="header-container">
+<div class="header-container" ng-show="!(hideHeader)">
     <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
     <options-menu parent-element="element">
