--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -1,4 +1,4 @@
-<div class="header-container">
+<div class="header-container" ng-show="!(hideHeader)">
     <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
     <options-menu parent-element="element">
