--- a/app/css/directives/heatMap.less
+++ b/app/css/directives/heatMap.less
@@ -66,7 +66,7 @@
         right: 20px;
         z-index: 1005;
 
-        .filter-container {
+        &.filter-container {
             top: 50px;
             left: 60px;
             z-index: 1000;
