NEON-1482: Enabling a basic version of the filtering code for multiple layers.

--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -69,7 +69,7 @@
 <div class="header-container filter-container">
     <div class="filter-reset pull-right" ng-class="{true: '', false: 'hidden'}[showFilter]">
         Filter
-        <a class="btn" ng-click="clearFilter()">
+        <a class="btn" ng-click="clearFilters()">
             <span class="glyphicon glyphicon-remove"></span>
         </a>
     </div>
