--- a/app/partials/directives/tagCloud.html
+++ b/app/partials/directives/tagCloud.html
@@ -2,9 +2,6 @@
     <span class="header-text pull-left">{{options.selectedTable.name}}</span>
 
     <options-menu parent-element="element" button-text="'No tag data'" show-button-text="showOptionsMenuButtonText">
-        <div class="form-group" ng-show="(hideAdvancedOptions) && (filterTags.length <= 1)">
-            <label>No Options Available</label>
-        </div>
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Table</label>
             <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForTags()">
@@ -15,14 +12,14 @@
             <select class="form-control" ng-model="options.tagField" ng-options="field for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="queryForTags()">
             </select>
         </div>
-        <div class="form-group" ng-class="{true: '', false: 'hidden'}[filterTags.length > 1]">
+        <div class="form-group">
             <label>Show records with</label>
             <div class="btn-group">
-                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.andTags]">
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[options.andTags]" ng-disabled="(filterTags.length <= 1)">
                     <input type="radio" ng-model="options.andTags" style="display:none" ng-value="true">
                     All filters
                 </label>
-                <label class="btn btn-default" ng-class="{true: '', false: 'active'}[options.andTags]">
+                <label class="btn btn-default" ng-class="{true: '', false: 'active'}[options.andTags]" ng-disabled="(filterTags.length <= 1)">
                     <input type="radio" ng-model="options.andTags" style="display:none" ng-value="false"> 
                     Any filters
                 </label>
