--- a/app/partials/directives/countby.html
+++ b/app/partials/directives/countby.html
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Count Field</label>
-            <select class="form-control" ng-model="options.countField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="handleChangeCountField()">
+            <select class="form-control" ng-model="options.field" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field for field in fields" ng-change="handleChangeField()">
                 <option disabled selected value="">Please choose a field</option>
             </select>
         </div>
