--- a/app/css/style.less
+++ b/app/css/style.less
@@ -200,7 +200,7 @@ label{
     .popover{
         left: auto;
         right: 0px;
-        top: 45px;
+        top: 35px;
         margin-top: 0;
 
         background: none;
@@ -211,7 +211,7 @@ label{
 
         > .arrow{
             left: auto;
-            right: 30px;
+            right: 20px;
             top: 0;
         }
     }
@@ -318,14 +318,10 @@ label{
     position: static;
 }
 
-.container{
-    @media (min-width: 1460px) {
-        width: 1430px;
-    }
-
-    @media (min-width: 1860px) {
-        width: 1830px;
-    }
+.container {
+    width: 99%;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .count{
@@ -404,7 +400,7 @@ label{
 
     span {
         &.footer-text {
-            color: #999999;
+            color: @main-text-color;
             font-size: 16px;
             font-weight: bold;
             line-height: 1.33;
@@ -428,8 +424,8 @@ label{
 }
 
 .gridster {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .gridster-item-resizable-handler {
@@ -451,7 +447,7 @@ label{
 
     span {
         &.header-text {
-            color: #999999;
+            color: @main-text-color;
             font-size: 16px;
             font-weight: bold;
             line-height: 1.33;
@@ -499,7 +495,7 @@ label{
         font-size: 12px;
 
         &.legend-hidden{
-            color: #999999;
+            color: @main-text-color;
 
             .legend-icon{
                 background: #e1e1e1 !important;
@@ -650,7 +646,8 @@ label{
         }
 
         img{
-            margin-left: 6px;
+            margin-left: 5px;
+            margin-right: 5px;
         }
     }
 }
