--- a/app/css/style.less
+++ b/app/css/style.less
@@ -547,10 +547,16 @@ label{
     }
 }
 
-.loader, .loader:after {
+.loader {
     border-radius: 50%;
     width: 10em;
     height: 10em;
+
+    &:after {
+        border-radius: 50%;
+        width: 10em;
+        height: 10em;
+    }
 }
 
 .modal-backdrop{
@@ -687,6 +693,28 @@ label{
 .overlay-above{
     position: relative;
     z-index: 1050;
+}
+
+.overlay-container {
+    .loader {
+        text-shadow: 0 1px 0 rgba(240,240,240,0.9);
+        background-color: rgba(240, 240, 240, 0.6);
+
+        position: fixed;
+        left: 49%;
+        top: 40%;
+        display: inline-block;
+        line-height: 0;
+
+        z-index: 9999999;
+
+        border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+        border-right: 1.1em solid rgba(40, 255, 25, 0.9);
+        border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+        border-left: 1.1em solid #ffffff;
+        -webkit-animation: load8 1.1s infinite linear;
+        animation: load8 1.1s infinite linear;
+    }
 }
 
 .panel-group {
