--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -120,6 +120,56 @@
             }
         }
     }
+
+    .olControlLayerSwitcher {
+        top: 90px;
+        left: 5px;
+        background-color: @main-background;
+        border: @border; 
+        color: black;
+        
+        .dataLbl {
+            font-size: 18px;
+        }
+
+        .baseLbl {
+            font-size: 18px;
+        }
+
+        .labelSpan {
+            font-size: 16px;
+            color: black;
+        }
+
+        .layersDiv {
+            padding-left: 30px;
+            background-color: @main-background;
+        }
+
+        .minimizeDiv {
+            left: 0px;
+            height: 40px;
+            width: 30px;
+            background-color: darkblue;
+            border-radius: 0px 15px 15px 0px;
+            border: @border; 
+        }
+
+        .maximizeDiv {
+            left: 0px;
+            height: 40px;
+            width: 30px;
+            background-color: darkblue;
+            border-radius: 0px 15px 15px 0px;
+            border: @border;
+        }
+
+        .olAlphaImg {
+            position: absolute !important;
+            left: 6px;
+            top: 10px;
+        }
+    }
 }
 
 .visualization-widget-mobile {
