NEON-1482: Styling the basic open layers layer switcher until it is replaced.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -124,7 +124,6 @@
     .olControlLayerSwitcher {
         top: 90px;
         left: 5px;
-        background-color: @main-background;
         border: @border; 
         color: black;
         
@@ -143,7 +142,7 @@
 
         .layersDiv {
             padding-left: 30px;
-            background-color: @main-background;
+            background-color: rgba(225, 225, 225, 0.7);
         }
 
         .minimizeDiv {
