--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -55,22 +55,32 @@
         position: absolute;
         bottom: 10px;
         left: 10px;
-        right: 10px;
         z-index: 1000;
         pointer-events: none;
     }
 
     .header-container {
         position: absolute;
-        top: 10px;
-        left: 10px;
-        right: 10px;
         z-index: 1005;
+
+        &.name-container {
+            left: 10px;
+            top: 10px;
+        }
+
+        &.menu-container {
+            right: 10px;
+            top: 10px;
+        }
+
+        &.legend-container {
+            top: 40px;
+            left: 10px;
+        }
 
         &.filter-container {
             top: 40px;
-            left: 45px;
-            z-index: 1000;
+            right: 10px;
         }
     }
 
@@ -167,6 +177,18 @@
             position: absolute !important;
             left: 6px;
             top: 10px;
+        }
+
+        input[type=radio] {
+            margin: 4px;
+        }
+
+        input[type=checkbox] {
+            margin: 4px;
+        }
+
+        label {
+            margin: 0px;
         }
     }
 }
