--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -4,6 +4,10 @@
 
 <div class="header-container menu-container">
     <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
+        <div class="form-group">
+            <label>No options available</label>
+        </div>
+
         <!-- <div class="form-group">
             <label>Table</label>
             <select class="form-control" ng-model="options.selectedTable" ng-options="table.name for table in tables" ng-required="true" ng-disabled="(tables.length < 2)" ng-change="updateFieldsAndQueryForMapData()">
@@ -22,6 +26,7 @@
             </select>
         </div> -->
 
+        <!--
         <div class="form-group">
             <label>Data Limit</label>
             <div class="input-group">
@@ -33,6 +38,7 @@
                 </div>
             </div>
         </div>
+        -->
 
         <!-- <div class="form-group">
             <label>Map Layer</label>
