Fixed a major bug in the Filter Builder due to recent changes (multiple databases per dataset and pretty database/table names) in which it failed to correctly add filters on related fields.  Also set the default filter field to text if it is available.

--- a/app/partials/directives/filterBuilder.html
+++ b/app/partials/directives/filterBuilder.html
@@ -61,7 +61,7 @@
         </select>
       </div>
       <div class="form-group">
-        <select class="form-control" ng-model="filterRow.table" ng-options="table.prettyName for table in tables" ng-disabled="(tables.length < 2) || !(navbarItem)" ng-change="updateFieldsForFilterRow(filterRow)">
+        <select class="form-control" ng-model="filterRow.table" ng-options="table.prettyName for table in filterRow.tableOptions" ng-disabled="(tables.length < 2) || !(navbarItem)" ng-change="updateFieldsForFilterRow(filterRow)">
         </select>
       </div>
       <div class="form-group">
