--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -4,8 +4,17 @@
 
 <div class="header-container menu-container">
     <options-menu parent-element="element" button-text="optionsMenuButtonText" show-button-text="showOptionsMenuButtonText">
-        <div class="form-group">
-            <label>No options available</label>
+        <div class="form-group" ng-repeat="layer in options.layers">
+            <label>Filtering on {{layer.name}}</label>
+            <div class="btn-group">
+                <label class="btn btn-default" ng-class="{true: 'active', false: ''}[layer.active]">
+                    <input type="radio" style="display:none" ng-model="layer.active" ng-value="true" ng-change="updateFilteringOnLayer(layer)"> Yes
+                </label>
+                <label class="btn btn-default" ng-class="{true: '', false: 'active'}[layer.active]">
+                    <input type="radio" style="display:none" ng-model="layer.active" ng-value="false" ng-change="updateFilteringOnLayer(layer)"> No
+                </label>
+            </div>
+            <div class="clearfix"></div>
         </div>
 
         <!-- <div class="form-group">
