Fixing some oddities and bugs in the styling for the demo.

--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -47,7 +47,7 @@
             top: 25px;
             right: -10px;
             position: absolute;
-            z-index: 1000;
+            width: 250px;
         }
     }
 
@@ -71,6 +71,7 @@
         &.menu-container {
             right: 10px;
             top: 10px;
+            z-index: 1010;
         }
 
         &.legend-container {
