Adding a title to the navbar based on the connect-on-load dataset that is displayed whenever the other navbar items are hidden.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -823,3 +823,9 @@ label{
     border: 0;
     padding: 0;
 }
+
+.navbar .navbar-title-text {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
