--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -53,6 +53,18 @@
                 </div>
             </div>
         </div>
+
+        <!-- Begin Daniel's stuff here =========================================================== -->
+
+        <div class="form-group">
+            <div class="input-group">
+                <button type="button" class="btn btn-default export" title="Export" ng-click="requestExport()">
+                    Export to File
+                </button>
+            </div>
+        </div>
+
+        <!-- End Daniel's stuff here ============================================================= -->
     </options-menu>
 </div>
 
