--- a/app/partials/directives/map.html
+++ b/app/partials/directives/map.html
@@ -80,6 +80,14 @@
                 </select>
             </div>
         </div> -->
+        
+        <div class="form-group">
+            <div class="input-group">
+                <button type="button" class="btn btn-default export" title="Export" ng-click="requestExport()">
+                    Export to File
+                </button>
+            </div>
+        </div>
     </options-menu>
 </div>
 
