--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -50,6 +50,13 @@
             </div>
             <div class="clearfix"></div>
         </div>
+        <div class="form-group">
+          <div class="input-group">
+            <button type="button" class="btn btn-default export" title="Export" ng-click="requestExport()">
+              Export to File
+            </button>
+          </div>
+        </div>
     </options-menu>
 </div>
 
