--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -30,6 +30,15 @@
             <select class="form-control" ng-model="options.attrY" ng-options="field for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)">
             </select>
         </div>
+
+        <div class="form-group">
+            <div class="input-group">
+                <button type="button" class="btn btn-default export" ng-click="requestExport()">
+                    Export to File
+                </button>
+            </div>
+        </div>
+        
     </options-menu>
 </div>
 
