--- a/app/partials/directives/linechart.html
+++ b/app/partials/directives/linechart.html
@@ -38,6 +38,15 @@
                 <option value="">None</option>
             </select>
         </div>
+
+        <div class="form-group">
+            <div class="input-group">
+                <button type="button" class="btn btn-default export" ng-click="requestExport()">
+                    Export to File
+                </button>
+            </div>
+        </div>
+
     </options-menu>
 </div>
 
