--- a/app/partials/directives/queryResultsTable.html
+++ b/app/partials/directives/queryResultsTable.html
@@ -56,7 +56,7 @@
 
         <div class="form-group">
             <div class="input-group">
-                <button type="button" class="btn btn-default export" title="Export" ng-click="requestExport()">
+                <button type="button" class="btn btn-default export" ng-click="requestExport()">
                     Export to File
                 </button>
             </div>
